// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User profile component renders default avatar if signed in 1`] = `
<div
  className="tour-user-profile"
>
  <div>
    <WithStyles(ForwardRef(IconButton))
      aria-label="Open user menu"
      className="UserProfileComponent-button-1"
      onClick={[Function]}
    >
      <AccountCircleIcon />
    </WithStyles(ForwardRef(IconButton))>
    <WithStyles(ForwardRef(Menu))
      anchorEl={null}
      id="simple-menu"
      onClose={[Function]}
      open={false}
    >
      <div
        className="UserProfileComponent-usernameContainer-2"
      >
        <WithStyles(ForwardRef(Typography))>
          Signed in as:
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))
          className="UserProfileComponent-username-3"
        >
          anonymous
        </WithStyles(ForwardRef(Typography))>
      </div>
      <WithStyles(Divider) />
      <WithStyles(MenuItem)
        aria-label="Manage cookies item"
        onClick={[Function]}
      >
        <WithStyles(ListItemIcon)>
          <pure(SettingsIcon) />
        </WithStyles(ListItemIcon)>
        <WithStyles(ListItemText)
          inset={true}
          primary="manage-cookies-button"
        />
      </WithStyles(MenuItem)>
      <WithStyles(Divider) />
      <WithStyles(MenuItem)
        aria-label="Sign out item"
        onClick={[Function]}
      >
        <WithStyles(ForwardRef(ListItemIcon))>
          <ExitToAppIcon />
        </WithStyles(ForwardRef(ListItemIcon))>
        <WithStyles(ForwardRef(ListItemText))
          inset={true}
          primary="logout-button"
        />
      </WithStyles(ForwardRef(MenuItem))>
    </WithStyles(ForwardRef(Menu))>
  </div>
</div>
`;

exports[`User profile component renders sign in button if not signed in 1`] = `
<div
  className="tour-user-profile"
>
  <WithStyles(ForwardRef(Button))
    className="UserProfileComponent-button-1"
    onClick={[Function]}
  >
    <WithStyles(ForwardRef(Typography))
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      login-button
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Button))>
</div>
`;

exports[`User profile component renders user avatar if signed in with avatar url 1`] = `
<div
  className="tour-user-profile"
>
  <div>
    <WithStyles(ForwardRef(Avatar))
      alt="user"
      aria-label="Open user menu"
      className="UserProfileComponent-avatar-4"
      onClick={[Function]}
      src="test_url"
    />
    <WithStyles(ForwardRef(Menu))
      anchorEl={null}
      id="simple-menu"
      onClose={[Function]}
      open={false}
    >
      <div
        className="UserProfileComponent-usernameContainer-2"
      >
        <WithStyles(ForwardRef(Typography))>
          Signed in as:
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))
          className="UserProfileComponent-username-3"
        >
          test
        </WithStyles(ForwardRef(Typography))>
      </div>
      <WithStyles(Divider) />
      <WithStyles(MenuItem)
        aria-label="Manage cookies item"
        onClick={[Function]}
      >
        <WithStyles(ListItemIcon)>
          <pure(SettingsIcon) />
        </WithStyles(ListItemIcon)>
        <WithStyles(ListItemText)
          inset={true}
          primary="manage-cookies-button"
        />
      </WithStyles(MenuItem)>
      <WithStyles(Divider) />
      <WithStyles(MenuItem)
        aria-label="Sign out item"
        onClick={[Function]}
      >
        <WithStyles(ForwardRef(ListItemIcon))>
          <ExitToAppIcon />
        </WithStyles(ForwardRef(ListItemIcon))>
        <WithStyles(ForwardRef(ListItemText))
          inset={true}
          primary="logout-button"
        />
      </WithStyles(ForwardRef(MenuItem))>
    </WithStyles(ForwardRef(Menu))>
  </div>
</div>
`;
